tests/specs/const_declaration.txt
# mod.ts
export const Const = 0;

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:14
  | 
1 | export const Const = 0;
  |              ^

# output.txt
Defined in file:///mod.ts:0:14

const Const: 0


# output.json
{
  "imports": [],
  "symbols": [
    {
      "name": "Const",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 13,
            "byteIndex": 13
          },
          "declarationKind": "export",
          "kind": "variable",
          "def": {
            "tsType": {
              "repr": "0",
              "kind": "literal",
              "value": {
                "kind": "number",
                "number": 0.0
              }
            },
            "kind": "const"
          }
        }
      ]
    }
  ]
}
